Changes in 2.3.5 release (coming soon):

- CPU
  - Fixed critical bug with 0x90 opcode (NOP) handling in x86-64 mode
  - Added emulation of SSE4 instructions (Stanislav)
  - Do not save and restore XMM8-XMM15 registers when not in x86-64 mode
  - Fixed zero upper 32-bit part of GPR in x86-64 mode
  - CMOV_GdEd should zero upper 32-bit part of GPR register even if the
    'cmov' condition was false !
  - Implemented CLFLUSH instruction, report non-zero cache size in CPUID
  - Fixed PUSHA/POPA instructions behavior in real mode
  - Fixed detecting of inexact result by FPU
  - Fixed denormals-are-zero (DAZ) handling by SSE convert instructions

- General
  - 2nd simulation support in wxBochs now almost usable (simulation cleanup
    code added and memory leaks fixed)

- Configure and compile
  - several fixes for MacOSX, OpenBSD and Solaris 10
  - enable save/restore feature by default for all configurations
  - reorganized SSE configure options to match Intel(R) Programming 
    Reference Manual, new option introduced for SSE extensions enabling.
    To enable Intel Core Duo 2 new instructions use 
        --enable-sse=3 --enable-sse-extension
    enabling of SSE4 (--enable-sse=4) will enable SSE3 exensions as well
  - removed old PIT, always use new PIT written by Greg Alexander,
    removed configure option --enable-new-pit

- I/O devices (Volker)
  - Floppy
    - partial non-DMA mode support (patch by John Comeau)
  - Hard drive / cdrom
    - hard disk emulation now supports ATA-6 (LBA48 addressing, UDMA modes)
    - VMWare version 4 disk image support added (patch by Sharvil Nanavati)
  - PCI
    - initial support for the PIIX4 ACPI controller
  - Serial
    - added support for 3-button mouse with Mousesystems protocol
  - USB
    - experimental USB device change support added
    - rewrite of the existing USB devices code
    - new USB devices 'disk' and 'tablet' (ported from the Qemu project)

- Bochs internal debugger