@@ -2,7 +2,7 @@ dnl // Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.50)
 AC_INIT(bochs.h)
-AC_REVISION([[$Id: configure.in,v 1.337 2007/04/19 16:12:18 sshwarts Exp $]])
+AC_REVISION([[$Id: configure.in,v 1.338 2007/07/15 19:03:38 sshwarts Exp $]])
 AC_CONFIG_HEADER(config.h)
 AC_CONFIG_HEADER(ltdlconf.h)
 
@@ -1642,6 +1642,23 @@ AC_ARG_ENABLE(daz,
       AC_MSG_RESULT(no)
       AC_DEFINE(BX_SUPPORT_DAZ, 0)
     fi
+    ]
+  )
+
+AC_MSG_CHECKING(for misaligned SSE support)
+AC_ARG_ENABLE(misaligned-sse,
+  [  --enable-misaligned-sse           misaligned SSE support],
+  [if test "$enableval" = yes; then     
+    AC_MSG_RESULT(yes)
+    AC_DEFINE(BX_SUPPORT_MISALIGNED_SSE, 1)
+   elif test "$enableval" = no; then
+    AC_MSG_RESULT(no)
+    AC_DEFINE(BX_SUPPORT_MISALIGNED_SSE, 0)
+   fi
+   ],
+  [
+    AC_MSG_RESULT(no)
+    AC_DEFINE(BX_SUPPORT_MISALIGNED_SSE, 0)
     ]
   )
 
